force-app/main/default/objects/Campaign_Member_History_Tracking__c/Campaign_Member_History_Tracking__c.object-meta.xml
<CustomObject>
    <label>Campaign Member History Tracking</label>
    <nameField>
        <label>Campign Member History Traking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>