force-app/main/default/objects/Campaign_Member_History_Tracking__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <label>Campaign Member Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>