force-app/main/default/objects/Campaign_Member_History_Tracking__c/fields/Changed_Field__c.field-meta.xml
<CustomField>
    <fullName>Changed_Field__c</fullName>
    <label>Changed Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>