force-app/main/default/objects/Campaign_Member_History_Tracking__c/fields/Changed_value__c.field-meta.xml
<CustomField>
    <fullName>Changed_value__c</fullName>
    <label>Changed value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>